# picoHomeBoard

./: .gitignore  .gitmodules  Doxyfile  README.md  cppcheck.cppcheck
.github/workflows/: cmake-single-platform.yml  pou_test.yml
src/: CMakeLists.txt  gpio_pico.cpp  gpio_pico.h  homeBoard.cpp  homeBoard.h  main.cpp  main_linux.cpp  main_test.cpp  main_wifi.cpp  mcp23017.cpp  mcp23017.h  mqtt_publisher.cpp  mqtt_publisher.h  serial_pico.cpp  serial_pico.h  topeni.cpp  topeni.h  zaluzie.cpp  zaluzie.h  zaluzie_main.cpp  zaluzie_main.h
src/tests/: CMakeLists.txt  homeBoardTest.cpp  motor_test.cpp  zaluzie_test.cpp
tools/: zaluz_reader.sh
